# iromiru

./: Cargo.toml  README.md  build.rs  icon.clip
shaders/: color_cloud.hlsl  common.hlsl  histogram.hlsl  view.hlsl
src/: graphics.rs  gui.rs  main.rs  pass.rs  state.rs  worker.rs
src/graphics/: blob.rs  capture.rs  command_list.rs  compiler.rs  context.rs  descriptor.rs  device.rs  resource.rs  swapchain.rs  timer.rs
src/gui/: compositor.rs  control.rs  dpi.rs  gesture.rs  macros.rs  panel.rs  scrollbar.rs  theme.rs  util.rs  viewer.rs  widget.rs  window.rs
src/pass/: color_cloud_count_pass.rs  color_cloud_indirect_pass.rs  color_cloud_mesh_pass.rs  color_cloud_pass.rs  histogram_pass.rs  view_pass.rs
